-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 13
-
Component/s: hotspot
-
b24
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8225966 | 14 | David Holmes | P3 | Resolved | Fixed | team |
The following was seen in a test run:
stdout: [WARNING: JNI local refs: 76, exceeds capacity: 75
at jdk.internal.util.SystemProps$Raw.vmProperties(java.base/Native Method)
at jdk.internal.util.SystemProps$Raw.cmdProperties(java.base/SystemProps.java:253)
at jdk.internal.util.SystemProps.initProperties(java.base/SystemProps.java:55)
at java.lang.System.initPhase1(java.base/System.java:1997)
while executing the runtime/jni/checked/TestCheckedEnsureLocalCapacity.java test.
The warning threshold is set to 32 for "limit < 32" and limit+32 in all other cases. So in this case the call to EnsureLocalCapacity has been made with a limit of 41 (there are 2 pre-existing live handles under graal) and we're actually creating more than 32 refs beyond that. We may have been creeping toward the end of that 32 buffer for some time and this change just put it over.
stdout: [WARNING: JNI local refs: 76, exceeds capacity: 75
at jdk.internal.util.SystemProps$Raw.vmProperties(java.base/Native Method)
at jdk.internal.util.SystemProps$Raw.cmdProperties(java.base/SystemProps.java:253)
at jdk.internal.util.SystemProps.initProperties(java.base/SystemProps.java:55)
at java.lang.System.initPhase1(java.base/System.java:1997)
while executing the runtime/jni/checked/TestCheckedEnsureLocalCapacity.java test.
The warning threshold is set to 32 for "limit < 32" and limit+32 in all other cases. So in this case the call to EnsureLocalCapacity has been made with a limit of 41 (there are 2 pre-existing live handles under graal) and we're actually creating more than 32 refs beyond that. We may have been creeping toward the end of that 32 buffer for some time and this change just put it over.
- backported by
-
JDK-8225966 Backout: JDK-8224814: Remove dead JNIHandleBlock freelist code
-
- Resolved
-
- relates to
-
JDK-8224814 Remove dead JNIHandleBlock freelist code
-
- Resolved
-
-
JDK-8193222 EnsureLocalCapacity() should maintain capacity requests through multiple calls
-
- Resolved
-