8225217: Backout: JDK-8224814: Remove dead JNIHandleBlock freelist code

Reviewed-by: kvn, kbarrett